--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_STANDARD 20)
 
 if (CMAKE_COMPILER_IS_GNUCC OR CMAKE_C_COMPILER_ID MATCHES "Clang")
     # add_compile_options(-Wsign-compare -Wall -Werror -Wno-switch -Wno-unknown-pragmas -Wstrict-prototypes -Wpointer-arith -Wno-char-subscripts -Wno-long-long)
-    add_compile_options(-Wall -Werror -pedantic)
+    add_compile_options(-g -Wall -Werror -pedantic)
 elseif(MSVC)
     add_compile_options(/WX /MP /FC)
     set(CMAKE_EXE_LINKER_FLAGS_DEBUG
